--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Unity WebGL Player | ƒAƒNƒVƒ‡ƒ“ƒQ[ƒ€iƒx[ƒ^”Åjv0.1.1</title>
-</head>
-<body>
-		<p>à–¾bƒAƒNƒVƒ‡ƒ“ƒQ[ƒ€‚Å‚·Bworld 1-1‚Ü‚Åì‚Á‚Ä‚ ‚è‚Ü‚·BXV‚³‚ê‚é‚©‚Í‚¤på‚Ì‹C•ªŸ‘æ‚Å‚·w</p>
-		<p>‘€ì•û–@bƒQ[ƒ€“à‚É‚ ‚é•¶š‚ğ“Ç‚ñ‚Å‚­‚¾‚³‚¢B</p>
-		<p>ƒo[ƒWƒ‡ƒ“bbeta v0.1.1</p>
-		<p>ƒƒObv0.1.1bworld 1-1ŒöŠJ</p>
-</body>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Unity WebGL Player | ã‚¢ã‚¯ã‚·ãƒ§ãƒ³ã‚²ãƒ¼ãƒ ï¼ˆãƒ™ãƒ¼ã‚¿ç‰ˆï¼‰v0.1.1</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+    <script src="TemplateData/UnityProgress.js"></script>
+    <script src="Build/UnityLoader.js"></script>
+    <script>
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/ã‚¢ã‚¯ã‚·ãƒ§ãƒ³ã‚²ãƒ¼ãƒ ï¼ˆãƒ™ãƒ¼ã‚¿ç‰ˆï¼‰v0.1.1.json", {onProgress: UnityProgress});
+    </script>
+  </head>
+  <body>
+    <div class="webgl-content">
+      <div id="unityContainer" style="width: 960px; height: 600px"></div>
+      <div class="footer">
+        <div class="webgl-logo"></div>
+        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
+        <div class="title">ã‚¢ã‚¯ã‚·ãƒ§ãƒ³ã‚²ãƒ¼ãƒ ï¼ˆãƒ™ãƒ¼ã‚¿ç‰ˆï¼‰v0.1.1</div>
+      </div>
+    </div>
+  </body>
 </html>
