--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8"/>
-	<title>Unity WebGL Player | アクションゲーム（ベータ版）v0.1.1</title>
-</head>
-<body>
+	<head>
+		<meta charset="utf-8"/>
+		<title>Unity WebGL Player | アクションゲーム（ベータ版）v0.1.1</title>
+	</head>
+	<body>
+		<iframe src="./index2.html" width="1000" height="650"></iframe>
+
 		<p>説明｜アクションゲームです。world 1-1まで作ってあります。更新されるかはうp主の気分次第ですw</p>
 		<p>操作方法｜ゲーム内にある文字を読んでください。</p>
 		<p>バージョン｜beta v0.1.1</p>
 		<p>ログ｜v0.1.1｜world 1-1公開</p>
-</body>
+	</body>
 </html>
