--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title>Unity WebGL Player | アクションゲーム（ベータ版）v0.1.1</title>
+		<title>Unity WebGL Player | Square's life</title>
 	</head>
 	<body>
 		<iframe src="./index2.html" width="1000" height="650"></iframe>
