--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 		<title>Unity WebGL Player | Square's life</title>
 	</head>
 	<body>
-		<iframe src="./index2.html" width="1000" height="650"></iframe>
+		<div class="container">
+			<iframe src="./index2.html" width="1000" height="650"></iframe>
 
-		<p>説明｜アクションゲームです。world 1-1まで作ってあります。更新されるかはうp主の気分次第ですw</p>
-		<p>操作方法｜ゲーム内にある文字を読んでください。</p>
-		<p>バージョン｜beta v0.1.1</p>
-		<p>ログ｜v0.1.1｜world 1-1公開</p>
+			<p>説明｜アクションゲームです。world 1-1まで作ってあります。更新されるかはうp主の気分次第ですw</p>
+			<p>操作方法｜ゲーム内にある文字を読んでください。</p>
+			<p>バージョン｜beta v0.1.1</p>
+			<p>ログ｜v0.1.1｜world 1-1公開</p>
+		</div>
 	</body>
 </html>
