--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 		<div class="container">
 			<iframe src="./index2.html" width="1000" height="650"></iframe>
 
-			<p>説明｜アクションゲームです。world 1-1まで作ってあります。更新されるかはうp主の気分次第ですw</p>
+			<p>説明｜アクションゲームです。world 1-1まで作ってあります。プレイしてこの"四角"の"人生"を変えてください。</p>
 			<p>操作方法｜ゲーム内にある文字を読んでください。</p>
+			<p>コツ｜・空中移動を活用しましょう。</p>
+			<p>　　　・各ブロックの特性を理解しましょう。</p>
+			<p>　　　・慎重かつ大胆に</p>
 			<p>バージョン｜beta v0.1.1</p>
 			<p>ログ｜v0.1.1｜world 1-1公開</p>
 		</div>
