--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<p>コツ｜・空中移動を活用しましょう。</p>
 			<p>　　　・各ブロックの特性を理解しましょう。</p>
 			<p>　　　・慎重かつ大胆に</p>
+			<p>　　　・思慮を持ち正義をかざしてその生涯を送らなければ、何者も決して幸福にはなれないだろう。ープラトン</p>
 			<p>バージョン｜beta v0.1.1</p>
 			<p>ログ｜v0.1.1｜world 1-1公開</p>
 		</div>
