--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
 		<title>Unity WebGL Player | Square's life</title>
 	</head>
 	<body>
-		<div class="container">
+		<div style="text-align:center">
 			<iframe src="./index2.html" width="1000" height="650"></iframe>
 
-			<p>説明｜アクションゲームです。world 1-1まで作ってあります。プレイしてこの"四角"の"人生"を変えてください。</p>
-			<p>操作方法｜ゲーム内にある文字を読んでください。</p>
-			<p>コツ｜・空中移動を活用しましょう。</p>
-			<p>　　　・各ブロックの特性を理解しましょう。</p>
-			<p>　　　・慎重かつ大胆に</p>
-			<p>　　　・思慮を持ち正義をかざしてその生涯を送らなければ、何者も決して幸福にはなれないだろう。ープラトン</p>
-			<p>バージョン｜beta v0.1.1</p>
-			<p>ログ｜v0.1.1｜world 1-1公開</p>
+			<p style="text-align:left">
+				説明｜アクションゲームです。world 1-1まで作ってあります。プレイしてこの"四角"の"人生"を変えてください。<br/>
+				操作方法｜ゲーム内にある文字を読んでください。<br/>
+				コツ｜・空中移動を活用しましょう。<br/>
+				　　　・各ブロックの特性を理解しましょう。<br/>
+					　・慎重かつ大胆に<br/>
+					　・思慮を持ち正義をかざしてその生涯を送らなければ、何者も決して幸福にはなれないだろう。ープラトン<br/>
+				バージョン｜beta v0.1.1<br/>
+				ログ｜v0.1.1｜world 1-1公開
+			</p>
 		</div>
 	</body>
 </html>
