--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8"/>
-		<title>Unity WebGL Player | Square's life</title>
-	</head>
-	<body>
-		<div style="text-align:center">
-			<iframe src="./index2.html" width="1000" height="650"></iframe>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Square's life</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+  </head>
+  <body>
+  <div class="container is-max-desktop">
+		<iframe src="./index2.html" width="1000" height="650"></iframe>
 
-			<p style="text-align:left">
-				説明｜アクションゲームです。world 1-1まで作ってあります。プレイしてこの"四角"の"人生"を変えてください。<br/>
-				操作方法｜ゲーム内にある文字を読んでください。<br/>
-				コツ｜・空中移動を活用しましょう。<br/>
-				　　　・各ブロックの特性を理解しましょう。<br/>
-					　・慎重かつ大胆に<br/>
-					　・思慮を持ち正義をかざしてその生涯を送らなければ、何者も決して幸福にはなれないだろう。ープラトン<br/>
-				バージョン｜beta v0.1.1<br/>
-				ログ｜v0.1.1｜world 1-1公開
-			</p>
-		</div>
-	</body>
+		<table class="table is-bordered">
+			<tbody>
+				<tr><td>説明</td>
+				<td>アクションゲームです。world 1-1まで作ってあります。プレイしてこの"四角"の"人生"を変えてください。</td></tr>
+				<tr><td>操作方法</td>
+				<td>ゲーム内にある文字を読んでください。</td></tr>
+				<tr><td>コツ</td>
+				<td>・空中移動を活用しましょう。</td></tr>
+				<tr><td>	　
+				<td>・各ブロックの特性を理解しましょう。</td></tr>
+				<tr><td>	　
+				<td>・慎重かつ大胆に</td></tr>
+				<tr><td>	　
+				<td>・思慮を持ち正義をかざしてその生涯を送らなければ、何者も決して幸福にはなれないだろう。ープラトン</td></tr>
+				<tr><td>バージョン</td>
+				<td>beta v0.1.1</td></tr>
+				<tr><td>ログ</td>
+				<td>v0.1.1｜world 1-1公開</td></tr>
+			</tbody>
+		</table>
+  </div>
+  </body>
 </html>
